Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82157

Application crashes when changing an active Drag's supportedActions

    XMLWordPrintable

Details

    • macOS, Windows
    • dbb0d83779d09dca35f5ad6ee68a19f4e93eec1d (qt/qtdeclarative/dev) b040a00a4110923940f3dbc02a7e305f03198e3a (qt/qtdeclarative/5.15)

    Description

      Reproduction Steps:

      • Run the attached main.qml
      • Drag the red rectangle to the blue drop area
      • Observe the bug

      Expected:

      • The Drag's supportedActions are changed
      • The mouse cursor is updated to reflect the supportedActions change

      Actual:

      • The application crashes, see attached stack trace of the crash

      Notes:

      • The crash won't happen if Drag.dragType is set to its default value
      • Changing Drag.keys (possibly other properties) also seems to trigger the same crash

      Attachments

        1. DragAndDropCrash.log
          6 kB
        2. main.qml
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            yan.li Yan Li
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes