QQuickDrag: Do not crash when changing supportedActions

Fixes: QTBUG-82157
Change-Id: I9d694dd543f41b1ce2b6976983d03a3dc659245d
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit dbb0d83779d09dca35f5ad6ee68a19f4e93eec1d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>